--- a/paths.html
+++ b/paths.html
@@ -8,5 +8,7 @@
     <img src="paths/02.svg">
     <img src="paths/03.svg">
     <img src="paths/04.svg">
+    <img src="paths/05.svg">
+    <img src="paths/06.svg">
   </body>
 </html>
